[package]
name = "ronix"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "protocol-asset", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0.1"
lofty = "0.14.0"
walkdir = "2.3.3"
rspc = { version = "0.1.3", features = ["tauri"] }
tokio = { version = "1.29.1", features = ["macros", "time"] }
gst = { version = "0.20.6", package = "gstreamer" }
gst-player = { version = "0.20.5", package = "gstreamer-player" }
async-stream = "0.3.5"
nanoid = "0.4.0"
rand = "0.8.5"
souvlaki = "0.6.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
